extensions/wikia/WikiaBar/css/WikiaBar.scss
@import "skins/shared/color";
@import "skins/oasis/css/core/breakpoints-variables";
@import "skins/oasis/css/core/layout";
@import "skins/oasis/css/core/responsive-variables";
@import "skins/shared/mixins/menus";
@import "skins/shared/mixins/box-shadow";
@import "skins/shared/mixins/gradient";
@import "skins/shared/mixins/transition";
@import "skins/shared/mixins/transform";

$animationSpeed: 200ms;

#WikiaNotifications {
	z-index: $zTop;
	bottom: 38px;
	right: 16px;
	position: fixed;
	@include transition-shorthand(all $animationSpeed ease-in $animationSpeed);
	&.hidden {
		bottom: 7px;
		right: 16px;
		@include transition-shorthand(all $animationSpeed ease-in);
	}
}

.WikiaBarWrapper {
	bottom: 0;
	height: $wikia-bar-height;
	padding: 0;
	position: fixed;
	width: 100%;
	z-index: $zTop;
	@include box-shadow(0, 0, 10px, $color-page-shadow);
	@include transition-shorthand(all $animationSpeed ease-in $animationSpeed);
	&.hidden {
		bottom: -25px;
		z-index: -1;
		@include transition-shorthand(all $animationSpeed ease-in);
		.ad {
			opacity: 0;
			@include transition-shorthand(all $animationSpeed ease-in);
		}
	}
	.wikia-bar {
		background-image: url(/skins/oasis/images/checkers.png); /* inline */
		height: 25px;
		margin: auto;
		text-align: center;
		.ad {
			bottom: 0;
			float: left;
			left: 0;
			margin: 0 5px;
			position: fixed;
			width: 320px;
			@include transition-shorthand(all $animationSpeed ease-in $animationSpeed);
			iframe {
				display: block;
			}
		}
		.wikiabar-button {
			background-color: #303030;
			border: 1px solid #231f20;
			color: #fff;
			display: inline-block;
			float: left;
			font-size: 11px;
			height: 16px;
			line-height: 15px;
			margin: 0 3px 2px 0;
			padding: 4px 5px 3px 5px;
			img {
				float: left;
				height: 14px;
				margin-right: 5px;
			}
			span {
				float: right;
			}
		}
		.message {
			float: right;
			font-family: helvetica;
			font-size: 11px;
			height: 25px;
			margin: 0 24px 0 50px;
			padding: 5px 5px 0 0;
			text-align: right;
			white-space: nowrap;
			width: 420px;
			a {
				color: $color-header-text;
				text-decoration: none;
			}
		}
	}
	.wikia-bar-anon {
		padding-left: 330px;
	}
	.toolbar {
		background: transparent;
		border: 0;
		margin: 0 auto;
		padding: 3px 0 0 0;
		position: relative;
		text-align: left;
		width: 100%;
	}
	.arrow {
		background-image: url(/extensions/wikia/WikiaBar/images/arrowDown.png); /* inline */
		background-position: center;
		background-repeat: no-repeat;
		bottom: 0;
		display: block;
		height: 25px;
		position: absolute;
		right: 0;
		width: 24px;
		z-index: $zTop;
	}
}

.WikiaBarCollapseWrapper {
	background-color: $color-header-alt;
	background-image: url(/extensions/wikia/WikiaBar/images/arrowUp.png); /* inline */
	background-position: center;
	background-repeat: no-repeat;
	bottom: 0;
	position: fixed;
	right: 0;
	z-index: $zTop;
	@include box-shadow(0, 0, 10px, $color-page-shadow);
	@include transition-shorthand(all $animationSpeed ease-in $animationSpeed);
	&.hidden {
		bottom: -25px;
		@include transition-shorthand(all $animationSpeed ease-in);
	}
	.wikia-bar-collapse {
		display: block;
		float: right;
		height: 25px;
		width: 23px;
		background-image: url(/skins/oasis/images/checkers.png); /* inline */
	}
}

.popover.wikiaBar, .popover.wikiaBarMessage {
	.arrow {
		border-left: 10px solid transparent;
		border-top: 4px solid $color-page;
		border-right: 10px solid transparent;
		bottom: 2px;
		margin-left: -5px;
		right: 5px;
	}
	.popover-inner {
		float: right;
	}
}
.popover.wikiaBarMessage {
	.arrow {
		right: 30px;
	}
	.popover-inner {
		margin-right: 25px;
	}
}

body {
	&.nowikiabar {
		padding-bottom: 0;
	}

	&.wikia-bar-visible {
		padding-bottom: 25px;
	}
}

.WikiaBarWrapper .wikia-bar {
	margin: auto;

	// The same width as .wds-community-header, see /extensions/wikia/CommunityHeader/styles/index.scss
	@if ($widthType == 0) {
		@media #{$breakpoint-small-only} {
			width: $page-width-small + $padding-width-small * 2 + $content-border-width * 2;
		}

		@media #{$breakpoint-small-plus} {
			width: $page-width-small-plus + $padding-width-small-plus * 2 + $content-border-width * 2;
		}

		@media #{$breakpoint-medium-only} {
			width: $page-width-medium + $padding-width-medium * 2 + $content-border-width * 2;
		}

		@media #{$breakpoint-large-up} {
			width: $page-width-large + $padding-width-large * 2 + $content-border-width * 2;
		}
	}
}

@if ( $responsive-layout-enabled ) {
	@media screen and (min-width: $breakpoint-small) {
		.WikiaBarWrapper .wikia-bar {
			margin: auto;
			width: $breakpoint-small;

			&.wikia-bar-anon {
				margin: auto;
				width: $breakpoint-small - 330px; // 330px = padding-left of wikia-bar-anon
			}
		}
	}

	@media screen and (min-width: $breakpoint-fluid) {
		.WikiaBarWrapper .wikia-bar {
			margin: 0 $width-adskin;
			width: auto;

			&.wikia-bar-anon {
				margin: 0 $width-adskin;
				width: auto;
			}
		}
	}

	@media screen and (min-width: $breakpoint-max) {
		.WikiaBarWrapper .wikia-bar {
			margin: 0 auto;
			width: $width-outside-max;

			&.wikia-bar-anon {
				margin: 0 auto;
				width: $width-outside-max - 330px; // 330px = padding-left of wikia-bar-anon
			}
		}
	}
}

// Change z-indexes for proper stacking with VisualEditor focus mode
.ve {
	.WikiaBarWrapper, .WikiaBarCollapseWrapper {
		z-index: $zTop + 2;
	}
}

